<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second">


    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/tvSquad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Squad"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />


    <TextView
        android:id="@+id/tvAngkatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Angkatan"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSquad"/>


    <TextView
        android:id="@+id/tvHobi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Hobi"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAngkatan" />

</androidx.constraintlayout.widget.ConstraintLayout>